--- a/src/Assistant.WebApp.BlazorWasm/wwwroot/index.html
+++ b/src/Assistant.WebApp.BlazorWasm/wwwroot/index.html
@@ -9,7 +9,7 @@
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <link href="ApimAIAssistant.BlazorWasmApp.styles.css" rel="stylesheet" />
+    <link href="ApimPolicyAssistant.WebApp.BlazorWasm.styles.css" rel="stylesheet" />
 </head>
 
 <body>
